hphp/hack/test/typecheck/parse_error_loc_else.php.exp
File "parse_error_loc_else.php", line 22, characters 14-22:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
